--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-inlinesvg": "^4.2.0",
     "react-router": "^7.9.3",
     "styled-components": "^6.1.19"
   },
