--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.64.0",
     "react-inlinesvg": "^4.2.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router": "^7.9.3",
+    "recharts": "^3.2.1",
     "styled-components": "^6.1.19",
     "zod": "^4.1.11"
   },
